2006-10-15  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* mf/GNUmakefile (ALL_GEN_FILES): remove fonts.cache-1

2006-10-15  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/*.cc, lily/include/*.hh: eliminate dummy arguments from
	macros ADD_TRANSLATOR, DECLARE_SMOBS and DECLARE_SIMPLE_SMOBS
	
2006-10-15  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* mf/GNUmakefile: remove fc-cache calls; not necessary for fc 2.4; 

	* Doxyfile: remove file.

	* scm/define-grob-interfaces.scm (string-finger-interface): add
	string-finger-interface

	* lily/general-scheme.cc (LY_DEFINE): move
	ly_camel_case_to_lisp_identifier to here. Use vector<char> iso. char[] 

	* Documentation/topdocs/NEWS.tely (Top): add note for
	string-finger feature.

	* scm/define-grobs.scm (all-grob-descriptions): add 'string-names
	property.

	* scm/output-lib.scm (string-finger::calc-text): read 'digit
	instead of 'text

	* input/regression/script-stack-horizontal.ly: new file.

	* ly/engraver-init.ly: add Script_row_engraver.

	* lily/script-column.cc (order_grobs): refactor: separate axis
	independent code.
	(row_before_line_breaking): new function.

	* lily/script-row-engraver.cc (Script_row_engraver): new file.

	* scm/define-grobs.scm (all-grob-descriptions): add ScriptRow

2006-10-14  Jürgen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/instrument-notation.itely: Cleanup: Remove
	annoying skip notes from mensural ligature example.  Update
	@refbugs for ligatures and mensural ligatures.

	* lily/coherent-ligature-engraver.cc,
	lily/include/coherent-ligature-engraver.hh,
	lily/mensural-ligature-engraver.cc,
	lily/vaticana-ligature-engraver.cc: Revise code for item
	reparentizing.  There should now be less programming_error
	messages.

	* lily/mensural-ligature-engraver.cc: Improve placement of dots.

	* lily/mensural-ligature.cc, lily/vaticana-ligature.cc:
	Maintenance bugfix: Don't create empty Stencil (), but empty box
	instead.  This fix should eliminate some programming_error
	messages.
