@@ -6,5 +6,5 @@ texidoc = "Tildes in lyric syllables are converted to tie symbols."
 \version "2.9.22"
 
 \lyrics {
-  bla~bla
+  bla~blo~blub 
 }
